# raggatta

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: __main__.py  chat.py  prompt.py
