[tool.poetry]
name = "raggatta"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
langchain-chroma = "^0.1.2"
langchain-anthropic = "^0.1.22"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
pytest = "^8.3.2"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
